--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,15 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TabrezAlam98/mock-11_backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TabrezAlam98/mock-11_backend/issues"
+  },
+  "homepage": "https://github.com/TabrezAlam98/mock-11_backend#readme",
+  "description": ""
 }
